plugins {
    id 'java'
    id 'application'
    id 'eclipse'
    id 'com.gradleup.shadow' version '8.3.7'
    
    id 'com.github.ben-manes.versions' version '0.51.0'

}

group = 'com.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    implementation 'io.javalin:javalin:6.3.0'
    implementation 'org.slf4j:slf4j-simple:2.0.13'
}

application {
    mainClass = 'scorta.Hello'
}
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('--enable-preview')
}

tasks.withType(JavaExec).configureEach {
    jvmArgs('--enable-preview')
}